{
  "title": "Profil",
  "edit_profile": "Edytuj profil",
  "edit_avatar": "Zmień avatar",
  "first_name": "Imię",
  "nickname": "Ksywka",
  "bio": "O sobie",
  "bio_placeholder": "Kilka słów o sobie (max 200 znaków)",
...
